--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ packaging==24.0
 pillow==10.2.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+pytorch-fid==0.3.0
+scipy==1.13.0
 six==1.16.0
 sympy==1.12
 torch==2.2.1
